сделал обязательные поля. по прежнему ошибочки при обновлении

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -1667,8 +1667,8 @@ html
                         br
                         |баню-бочку за 12 минут
                     input(type="hidden" value="Поможем подобрать баню")
-                    input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                    input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                    input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                    input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                     input(type="submit" class="submit button" value="Получить консультацию")
         .error.block
             .container
@@ -2014,8 +2014,8 @@ html
                         small
                                 | Перезвоним вам в течениe 12 минут в рабочее время.
                     input(type="hidden" value="Узнать про аксессуары")
-                    input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                    input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                    input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                    input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                     input(type="submit" class="submit button" value="Узнать")
         .scheme.block
             .container
@@ -2159,8 +2159,8 @@ html
                         small
                             | Наш специалист свяжется с вами в течениe 12 минут в рабочее время.
                     input(type="hidden" value="Остались вопросы")
-                    input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                    input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                    input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                    input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                     input(type="submit" class="submit button" value="перезвоните мне")
         .map.block
             .container
@@ -2174,8 +2174,8 @@ html
                         br
                         |на просмотр
                     input(type="hidden" value="Записаться на просмотр")
-                    input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                    input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                    input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                    input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                     input(type="submit" class="submit button" value="записаться")
             #map
         .footer
@@ -2209,8 +2209,8 @@ html
                 .modal__form-desc
                     |и мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         |Удобное время для звонка:
@@ -2246,8 +2246,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2283,8 +2283,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2320,8 +2320,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2357,8 +2357,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2394,8 +2394,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2431,8 +2431,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2468,8 +2468,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2505,8 +2505,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2542,8 +2542,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2579,8 +2579,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2616,8 +2616,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2653,8 +2653,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2690,8 +2690,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2727,8 +2727,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
@@ -2764,8 +2764,8 @@ html
                 .modal__form-desc
                     | мы свяжемся с вами в течение 12 минут
                 input(name="theme" type="hidden" value="")
-                input(name="name" placeholder="Введите ваше имя" class="input input--name")
-                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone")
+                input(name="name" placeholder="Введите ваше имя" class="input input--name rfield")
+                input(name="phone" placeholder="Введите ваш телефон" class="input input--phone rfield")
                 p
                     b
                         | Удобное время для звонка:
