сайт готов. 2 проблемы: 1) при обновлении-появляется модальное окно заказа на баню бочку Эксклюзив и окно благодарности (как после заполнения заявки). 2) после заполнения заявки-не приходит письмо на почту.

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -7,7 +7,7 @@ html
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         meta(charset="utf-8")
         title.
-            Бани-бочки под ключ по всей России
+            Баня-бочка24 - Производство и установка по всей России
     body
     .main
             .container
@@ -1772,154 +1772,120 @@ html
         .about.block
             .container
                 .block__title
-                    |Мы производители
+                    |Мы - производители
                 .block__desc
-                    |Посмотрите видео с нашего производства
-                .about__iframe
-                    iframe(src="https://www.youtube.com/embed/rtUntHROVCo" width="560" height="315" frameborder="0" allowfullscreen)
+                    |Посмотрите фотографии с нашего производства (г. Вологда) <br>
+                    .about__images
+                        .about__image
+                            a(href="img/proizv1.jpg" data-lightbox="lightbox")
+                                img(src="img/proizv1-1.jpg")
+                        .about__image
+                            a(href="img/proizv2.jpg" data-lightbox="lightbox")
+                                img(src="img/proizv2.jpg")
+                        .about__image
+                            a(href="img/proizv3.jpg" data-lightbox="lightbox")
+                                img(src="img/proizv3.jpg")
+                        .about__image
+                            a(href="img/proizv4.jpg" data-lightbox="lightbox")
+                                img(src="img/proizv4.jpg")
+                        .about__image
+                            a(href="img/proizv5.jpg" data-lightbox="lightbox")
+                                img(src="img/proizv5.jpg")
+                        .about__image
+                            a(href="img/proizv6.jpg" data-lightbox="lightbox")
+                                img(src="img/proizv6.jpg")
+                        .about__image
+                            a(href="img/proizv7.jpg" data-lightbox="lightbox")
+                                img(src="img/proizv7.jpg")
+                        .about__image
+                            a(href="img/proizv8.jpg" data-lightbox="lightbox")
+                                img(src="img/proizv8.jpg")
+                        .about__image
+                            a(href="img/proizv99.jpg" data-lightbox="lightbox")
+                                img(src="img/proizv99.jpg")
+                        .about__image
+                            a(href="img/proizv10.jpg" data-lightbox="lightbox")
+                                img(src="img/proizv10.jpg")
         .feedbacks.block
             .container
                 .block__title
                     |Отзывы
                 .feedbacks__item
                     .feedbacks__item-left
-                        iframe(src="https://www.youtube.com/embed/rtUntHROVCo" width="450" height="280" frameborder="0" allowfullscreen)
+                        <iframe width="450" height="280" src="https://www.youtube.com/embed/2ml3fy_YLDg" frameborder="0" allowfullscreen></iframe>
                     .feedbacks__item-right
                         p
                             strong
-                                |Максим
+                                |Елена
                         p
                             b
                                 |Дата установки:
                             span
-                                |15.05.2016
+                                |06.06.2016
                         p
                             b
                                 |Срок установки:
                             span
-                                |2 недели
+                                |14 дней
                         p
                             b
                                 |Модель:
                             span
-                                |Супер-люкс
+                                |Стандарт
                         p
                             b
                                 | Цена под ключ:
                             span
-                                | 79 900 р.
+                                | 110 900 р.
                         div
-                            |"Какой-то мега крутой отзыв."
+                            |"За такое короткое время я получила такую потрясающую бочку. То, что я хотела. То, что подходит. Я здесь буду получать удовольствие. Спасибо вам огромное. Ураа!"
                 .feedbacks__item
                     .feedbacks__item-left
-                        iframe(src="https://www.youtube.com/embed/rtUntHROVCo" width="450" height="280" frameborder="0" allowfullscreen)
+                        <iframe width="450" height="280" src="https://www.youtube.com/embed/K51s8-PfWEk" frameborder="0" allowfullscreen></iframe>
                     .feedbacks__item-right
                         p
                             strong
-                                | Максим
+                                | Владимир
                         p
                             b
                                 | Дата установки:
                             span
-                                | 15.05.2016
+                                | 01.06.2016
                         p
                             b
                                 | Срок установки:
                             span
-                                | 2 недели
+                                | 22 дня
                         p
                             b
                                 | Модель:
                             span
-                                | Супер-люкс
+                                | Стандарт с козырьком
                         p
                             b
                                 | Цена под ключ:
                             span
-                                | 79 900 р.
+                                | 113 900 р.
                         div
-                            | "Какой-то мега крутой отзыв."
-                .feedbacks__more.button
-                    |Посмотреть еще
-                .feedbacks__hidden
-                    .feedbacks__item
-                        .feedbacks__item-left
-                            iframe(src="https://www.youtube.com/embed/rtUntHROVCo" width="450" height="280" frameborder="0" allowfullscreen)
-                        .feedbacks__item-right
-                            p
-                                strong
-                                    | Максим
-                            p
-                                b
-                                    | Дата установки:
-                                span
-                                    | 15.05.2016
-                            p
-                                b
-                                    | Срок установки:
-                                span
-                                    | 2 недели
-                            p
-                                b
-                                    | Модель:
-                                span
-                                    | Супер-люкс
-                            p
-                                b
-                                    | Цена под ключ:
-                                span
-                                    | 79 900 р.
-                            div
-                                | "Какой-то мега крутой отзыв."
-                    .feedbacks__item
-                        .feedbacks__item-left
-                            iframe(src="https://www.youtube.com/embed/rtUntHROVCo" width="450" height="280" frameborder="0" allowfullscreen)
-                        .feedbacks__item-right
-                            p
-                                strong
-                                    | Максим
-                            p
-                                b
-                                    | Дата установки:
-                                span
-                                    | 15.05.2016
-                            p
-                                b
-                                    | Срок установки:
-                                span
-                                    | 2 недели
-                            p
-                                b
-                                    | Модель:
-                                span
-                                    | Супер-люкс
-                            p
-                                b
-                                    | Цена под ключ:
-                                span
-                                    | 79 900 р.
-                            div
-                                | "Какой-то мега крутой отзыв."
-        .official.block
+                            | "Предпочел остаться скрытым.. Только обзор. Внимание к деталям и профессионализм-вот что хотелось бы отметить в сотрудниках вашей фирмы. Попарился в день доставки. Супер!"
+        .attention.block
             .container
-                .block__title
-                    |Мы работаем официально
-                .official__images
-                    .official__image
-                        a(href="img/garanty.jpg" data-lightbox="lightbox")
-                            img(src="img/garanty.jpg")
-                    .official__image
-                        a(href="img/garanty.jpg" data-lightbox="lightbox")
-                            img(src="img/garanty.jpg")
-                    .official__image
-                        a(href="img/garanty.jpg" data-lightbox="lightbox")
-                            img(src="img/garanty.jpg")
-                    .official__image
-                        a(href="img/garanty.jpg" data-lightbox="lightbox")
-                            img(src="img/garanty.jpg")
-                    .official__image
-                        a(href="img/garanty.jpg" data-lightbox="lightbox")
-                            img(src="img/garanty.jpg")
+                .attention__title
+                    p
+                        b
+                            |14 дней произодство
+                        span
+                            |В среднем производство бани-бочки занимает от 2 до 4 недель
+                    p
+                        b
+                            |1 день доставка
+                        span
+                            |После производства доставим и установим баню-бочку на ваш участок за 1 день
+                    p
+                        b
+                            |365 дней гарантии
+                        span
+                            |Даем официальную гарантию на каждый элемент бани-бочки
         .additional.block
             .container
                 .block__title
@@ -2059,24 +2025,6 @@ html
                         |2-4 недели
                     .scheme__desc
                         |1 день
-        .attention.block
-            .container
-                .attention__title
-                    p
-                        b
-                            |14 дней произодство
-                        span
-                            |В среднем производство бани-бочки занимает от 2 до 4 недель
-                    p
-                        b
-                            |1 день доставка
-                        span
-                            |После производства доставим и установим баню-бочку на ваш участок за 1 день
-                    p
-                        b
-                            |365 дней гарантии
-                        span
-                            |Даем официальную гарантию на каждый элемент бани-бочки
         .faq.block
             .container
                 .block__title
@@ -2795,9 +2743,9 @@ html
                         | Ваши данные не будут <br>переданы 3-им лицам
         #msg.modal-window.modal-thanx
             h2
-                |Спасибо, Ваша заявка принята.
+                | Спасибо, Ваша заявка принята.
             p
-                |Мы свяжемся с Вами в ближайшее время.
+                | Мы свяжемся с Вами в ближайшее время.
         script(src='js/libs.js')
         script(src="http://api-maps.yandex.ru/2.1/?lang=ru_RU")
         script(src='js/build.js')
