--- a/sass/style.scss
+++ b/sass/style.scss
@@ -405,6 +405,22 @@ input {
     height: 315px;
     margin: 0 auto;
   }
+  &__images {
+    @include row();
+    text-align: center;
+  }
+  &__image {
+    @include column();
+    @include column-width(1, 5);
+    a {
+      display: block;
+      img {
+        display: block;
+        width: 100%;
+        margin-top: 20px;
+      }
+    }
+  }
 }
 .feedbacks {
   &__item {
@@ -423,16 +439,16 @@ input {
       width: 50%;
       p {
         margin-bottom: 15px;
-        font-size: 25px;
+        font-size: 20px;
         strong {
           text-transform: uppercase;
-          font-size: 30px;
+          font-size: 25px;
           font-weight: 500;
         }
         b {
           display: inline-block;
           margin-right: 10px;
-          font-size: 25px;
+          font-size: 20px;
           font-weight: 500;
         }
         span {
@@ -440,8 +456,8 @@ input {
         }
       }
       div {
-        margin-top: 50px;
-        font-size: 30px;
+        margin-top: 35px;
+        font-size: 20px;
       }
     }
   }
